--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>
         window.onload = function () {
             const ui = SwaggerUIBundle({
-                url: "UAT-POSTMAN-COLLECTION-2-OPENAPI.yml", 
+                url: "openapi.yaml", 
                 dom_id: "#openapi"
             })
         }
