--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.10.0/swagger-ui.js"></script>
     <script>
         window.onload = function () {
-            const ui = SwaggerUIBundle({
+            const ui = SwaggerUI({
                 url: "openapi.yaml", 
                 dom_id: "#openapi"
             })
