--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
+<!-- HTML for static distribution bundle build -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.10.0/swagger-ui.css">
-    <title>Narvar APIS</title>
+    <title>Swagger UI</title>
+    <link rel="stylesheet" type="text/css" href="./swagger-ui.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
+  </head>
 
-<body>
-    <div id="openapi">
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.10.0/swagger-ui.js"></script>
-    <script>
-        window.onload = function () {
-            const ui = SwaggerUIBundle({
-                url: "openapi.yaml", 
-                dom_id: "#openapi"
-            })
-        }
-    </script>
-</body>
+  <body>
+    <div id="swagger-ui"></div>
+    <script src="./swagger-ui-bundle.js" charset="UTF-8"> </script>
+    <script src="./swagger-ui-standalone-preset.js" charset="UTF-8"> </script>
+    <script src="./swagger-initializer.js" charset="UTF-8"> </script>
+  </body>
 </html>
